# mbajk-api

./: .dockerignore  .gitignore  Dockerfile  data.dvc  docker-compose.yaml  pyproject.toml
.dvc/: config
.github/workflows/: calculate_metrics.yml  data.yml  fetch_data.yml  test.yml  train_eval.yml
data/processed/: DVORANA TABOR.csv  mbajk_dataset.csv
data/raw/: DVORANA TABOR.csv  EUROPARK - POBREŠKA C..csv  (+27 more)
gx/: great_expectations.yml
models/: basic_model.h5  mms_scaler.pkl  std_scaler.pkl  target_scaler.pkl
notebooks/: data_processing.ipynb  fetch_data.ipynb  manual_testing.ipynb  remove_headers.ipynb  train_model.ipynb
reports/: 2024-05-01_19-50-23_metrics.txt  2024-05-01_19-50-23_train_metrics.txt  2024-05-01_19-53-42_metrics.txt  2024-05-01_19-53-42_train_metrics.txt  2024-05-01_19-54-23_metrics.txt  2024-05-01_19-54-23_train_metrics.txt  2024-05-01_19-55-16_metrics.txt  2024-05-01_19-55-16_train_metrics.txt  2024-05-01_20-13-42_metrics.txt  2024-05-01_20-13-42_train_metrics.txt  2024-05-01_20-14-30_metrics.txt  2024-05-01_20-14-30_train_metrics.txt  2024-05-01_20-16-07_metrics.txt  2024-05-01_20-16-07_train_metrics.txt  2024-05-01_20-17-04_metrics.txt  2024-05-01_20-17-04_train_metrics.txt  2024-05-01_22-19-13_metrics.txt  2024-05-01_22-19-13_train_metrics.txt  2024-05-01_22-24-26_metrics.txt  2024-05-01_22-24-26_train_metrics.txt  2024-05-01_22-26-27_metrics.txt  2024-05-01_22-26-27_train_metrics.txt  2024-05-02_15-14-16_metrics.txt  2024-05-02_15-14-16_train_metrics.txt  2024-05-02_15-17-23_metrics.txt  2024-05-02_15-17-23_train_metrics.txt
(+239 files in other folders)
